# src/api/dto/user.go
@@ -10,3 +10,25 @@ type TokenDetail struct {
 	AccessTokenExpireTime  int64  `json:"AccessTokenExpireTime"`
 	RefreshTokenExpireTime int64  `json:"RefreshTokenExpireTime"`
 }
+
+type RegisterUserByUsernameRequest struct {
+	FirstName string `json:"firstName" binding:"required,min=3"`
+	LastName  string `json:"lastName" binding:"required,min=3"`
+	Username  string `json:"username" binding:"required,min=5"`
+	Email     string `json:"email" binding:"required,email,min=6"`
+	Password  string `json:"password" binding:"required,password,min=6"`
+}
+
+type LoginByMobileRequest struct {
+	MobileNumber string `json:"mobileNumber" binding:"required,mobile,min=11,max=11"`
+	Otp          string `json:"otp" binding:"required,min=6,max=6"`
+}
+type RegisterLoginByMobileNumber struct {
+	MobileNumber string `json:"mobileNumber" binding:"required,mobile,min=11,max=11"`
+	Otp          string `json:"otp" binding:"required,min=6,max=6"`
+}
+
+type LoginByUsernameRequest struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required,min=6"`
+}
